--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -1,131 +1,6 @@
-/* <li class="nav-item dropdown" style={{position:'static'}}>
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Solutions
-        </a>
-        <div class="dropdown-menu form-control"   style={{marginTop:'40px',width:'100%',textAlign:'center',left:'0'}}>
-          <a class="dropdown-item" href="#" style={{display:'inline-block'}}>Actionbjbjbjbjbjvvvvvvvvv
-          </a>
-        </div>
-      </li> */
-      /* <div id='foo'style={{display:'none' ,position:'fixed'}}>
-      <div className='container' >
-        <div className='row'>
-          <div className='col-sm-4' style={{position:'relative',marginTop:'30px'}}>
-             <img src={drop_img1} style={{borderRadius:'20px',height:'140px',width:'450px'}} className="img-fluid"></img>
-             <h5 style={{position:'absolute', top:"40%",left:'15%'}}>GATEWAY - DCU - IoT Hub</h5>
-          </div>
-          <div className='col-sm-4' style={{position:'relative',marginTop:'30px'}}>
-             <img src={drop_img1} style={{borderRadius:'20px',height:'140px',width:'450px'}} className="img-fluid"></img>
-             <h5 style={{position:'absolute', top:"40%",left:'15%'}}>GATEWAY - DCU - IoT Hub</h5>
-          </div>
-          <div className='col-sm-4' style={{position:'relative',marginTop:'30px'}}>
-             <img src={drop_img1} style={{borderRadius:'20px',height:'140px',width:'450px'}} className="img-fluid"></img>
-             <h5 style={{position:'absolute', top:"40%",left:'15%'}}>GATEWAY - DCU - IoT Hub</h5>
-          </div>
-         
-        </div>
-      </div>
-      <div className='container' style={{marginTop:'30px'}}>
-        <div className='row'>
-          <div className='col-sm-4' style={{position:'relative',marginBottom:'30px'}}>
-             <img src={drop_img1} style={{borderRadius:'20px',height:'140px',width:'450px'}} className="img-fluid"></img>
-             <h5 style={{position:'absolute', top:"40%",left:'15%'}}>GATEWAY - DCU - IoT Hub</h5>
-          </div>
-          <div className='col-sm-4' style={{position:'relative',marginBottom:'30px'}}>
-             <img src={drop_img1} style={{borderRadius:'20px',height:'140px',width:'450px'}} className="img-fluid"></img>
-             <h5 style={{position:'absolute', top:"40%",left:'15%'}}>GATEWAY - DCU - IoT Hub</h5>
-          </div>
-          <div className='col-sm-4' style={{position:'relative',marginBottom:'30px'}}>
-             <img src={drop_img1} style={{borderRadius:'20px',height:'140px',width:'450px'}} className="img-fluid"></img>
-             <h5 style={{position:'absolute', top:"40%",left:'15%'}}>GATEWAY - DCU - IoT Hub</h5>
-          </div>
-         
-        </div>
-      </div>
-          </div> */
-
-/* <img src={logo} style={{height:"70px",width:"180px" }}/>
-import logo from './nav_image.png';  */
-
-
-*,
-*::after,
-*::before {
-  margin: 0;
-  box-sizing: border-box;
+.navbar-toggler>.close {
+  display:inline;
 }
-html {
-  font-size: 62.5%;
-}
-body {
-  font-size: 1.6rem;
-}
-li {
-  list-style: none;
-}
-a {
-  text-decoration: none;
-  color: rgb(204, 204, 204);
-}
-
-.nav {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  height: 8vh;
-  background: rgb(0, 33, 65);
-}
-.nav__brand {
-  text-transform: uppercase;
-}
-
-.nav__menu {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  gap: 3rem;
-}
-.nav__toggler {
-  display: none;
-}
-.nav__toggler div {
-  width: 2.5rem;
-  height: 0.2rem;
-  margin: 0.4rem;
-  background: rgb(204, 204, 204);
-  transition: 0.3s ease-in;
-}
-
-@media screen and (max-width: 768px) {
-  .nav__toggler {
-    display: block;
-    cursor: pointer;
-  }
-  .nav__menu {
-    position: fixed;
-    top: 7vh;
-    right: 0;
-    height: 93vh;
-    width: 50vw;
-    background: rgb(0, 33, 65);
-    flex-direction: column;
-    transform: translateX(100%);
-    transition: 0.5s ease-in;
-  }
-}
-/* Active Class */
-.nav__active {
-  transform: translateX(0%);
-}
-
-/* Toggle Icon Animation */
-
-.toggle .line1 {
-  transform: rotate(-45deg) translate(-4px, 5px);
-}
-.toggle .line2 {
-  opacity: 0;
-}
-.toggle .line3 {
-  transform: rotate(45deg) translate(-4px, -5px);
+.navbar-toggler.collapsed>.close, .navbar-toggler:not(.collapsed)>.navbar-toggler-icon {
+  display:none;
 }
